--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier-write": "prettier --write ."
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,14 +20,16 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-quick-prettier": "^0.0.29",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "postcss": "^8.4.21",
     "prettier": "^2.8.5",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.2.0",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "vite": "^4.2.0"
   }
 }
