--- a/react-portfolio-n2j/.prettierrc.json
+++ b/react-portfolio-n2j/.prettierrc.json
@@ -1,8 +1,8 @@
 {
+
+  "trailingComma": "es5",
   "semi": true,
-  "tabWidth": 2,
-  "printWidth": 100,
   "singleQuote": true,
-  "trailingComma": "none",
-  "jsxBracketSameLine": true
+  "useTabs": false,
+  "tabWidth": 2
 }
