--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prettier-write": "prettier --write ."
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write \"src/**/*.{jsx,js,css,html}\" --config ./.prettierrc.json"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,16 +21,14 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-quick-prettier": "^0.0.29",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.5",
+    "prettier": "^2.8.6",
+    "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.7",
     "vite": "^4.2.0"
   }
