added basic structure

--- a/react-portfolio-n2j/.eslintrc.json
+++ b/react-portfolio-n2j/.eslintrc.json
@@ -1,48 +1,44 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "jest": true
-    },
-    
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:react/jsx-runtime",
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
-
-    "overrides": [
-    ],
-
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-          }
-    },
-
-    "plugins": [
-        "react",
-        "prettier"
-    ],
-
-    "rules": {
-        "prettier/prettier": "error",
-        "react/jsx-uses-react": "error",
-        "react/jsx-uses-vars": "error",
-        "react/prop-types":
-         [ { "ignore": "<ignore>", 
-         "customValidators": "<customValidator>", 
-         "skipUndeclared": "<skipUndeclared>" }]
-
-    },
-
-    "settings": {
-        "react": {
-          "version": "detect"
-        }
+  "env": {
+    "browser": true,
+    "node": true,
+    "es2021": true,
+    "jest": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "prettier"
+  ],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "plugins": [
+    "react",
+    "prettier",
+    "react-hooks",
+    "import",
+    "react-use-props"
+  ],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
       }
+    ],
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
