--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write \"src/**/*.{jsx,js,css,html}\" --config ./.prettierrc.json"
-
-
+    "format": "prettier --write \"src/**/*.{jsx,js,css,html}\" --config ./.prettierrc.json",
+    "eslint": "eslint -c .eslintrc.json --ext .js,.jsx,.cjs src/ --fix"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -29,9 +30,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-use-props": "^1.0.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
