--- a/react-portfolio-n2j/.eslintrc.json
+++ b/react-portfolio-n2j/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "env": {
     "browser": true,
-    "node": true,
     "es2021": true,
     "jest": true
   },
@@ -9,36 +8,22 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react/jsx-runtime",
-    "prettier"
+    "plugin:prettier/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings"
   ],
-  "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "sourceType": "module"
+  },
+  "rules": {
+    "prettier/prettier": "error",
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
   },
   "plugins": [
     "react",
     "prettier",
-    "react-hooks",
-    "import",
-    "react-use-props"
-  ],
-  "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ],
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  }
+    "import"
+  ]
 }
