toggle inside projects

--- a/react-portfolio-n2j/.eslintrc.json
+++ b/react-portfolio-n2j/.eslintrc.json
@@ -25,5 +25,15 @@
     "react",
     "prettier",
     "import"
-  ]
+  ],
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    }
+  }
 }
