--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write \"src/**/*.{jsx,js,css,html}\" --config ./.prettierrc.json",
-    "eslint": "eslint -c .eslintrc.json --ext .js,.jsx,.cjs src/ --fix"
+    "eslint": "eslint -c .eslintrc.json --ext .js,.jsx,.cjs src/ --fix",
+    "tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -37,6 +38,10 @@
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.7",
     "vite": "^4.2.0",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   }
 }
