--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -21,6 +21,10 @@
     "react-router-dom": "6"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
@@ -38,10 +42,6 @@
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.7",
     "vite": "^4.2.0",
-    "vite-plugin-eslint": "^1.8.1",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0"
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
