--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -14,6 +14,7 @@
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "dotenv": "^16.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
