--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
     "dotenv": "^16.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
