--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -21,7 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
-    "react-router-dom": "6"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
