--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -20,8 +20,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-router": "^6.9.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
