added new command

--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "jsdoc": "^4.0.2",
+    "build": "vite build && npx tailwindcss build ./src/input.css -o ./dist/output.css",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
