--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-router": "^6.9.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "vite": "^4.4.9"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -49,7 +50,6 @@
     "prettier": "^2.8.6",
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.2.0",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
