--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -27,6 +27,7 @@
     "react-error-boundary": "^4.0.10",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.14.1",
+    "uuid": "^9.0.0",
     "vite": "^4.4.9"
   },
   "devDependencies": {
