--- a/react-portfolio-n2j/package.json
+++ b/react-portfolio-n2j/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
+    "axios": "^1.5.0",
     "better-docs": "^2.7.2",
     "dotenv": "^16.0.3",
     "jsdoc": "^4.0.2",
